update: 시트 출력 기능 쿼리량 최적화